# galImage2Ascii

./: CMakeLists.txt  ReadMe.md
cmake/: CPM.cmake
exec/: CMakeLists.txt  main.cpp
exec/include/: gal_args_parser.hpp
exec/src/: gal_args_parser.cpp
exec/test/: test.cpp
include/: gal_args_parser.hpp  gal_buffer.hpp  gal_color.hpp  gal_image.hpp  gal_pixel.hpp  gal_pixmap.hpp  gal_sample.hpp
src/: gal_args_parser.cpp  gal_color.cpp  gal_image.cpp  gal_pixel.cpp  gal_sample.cpp
